2007-11-24  Al Riddoch  <alriddoch@googlemail.com>

	* Release 0.6.1, Interface version 1.

2007-11-24  Al Riddoch  <alriddoch@zepler.org>

	* configure.ac, AUTHORS: Update contact email addresses.

2007-11-22  Al Riddoch  <alriddoch@zepler.org>

	* Atlas/Objects/BaseObject.cpp, Atlas/Objects/BaseObject.h:
	  Move the constructor out of the header, and clean it up a bit.

2007-04-29  Al Riddoch  <alriddoch@zepler.org>

	* configure.ac: Increment version to 0.6.1. Hey, maybe I'll even
	  release it at some point.

2007-04-25  Al Riddoch  <alriddoch@zepler.org>

	* Atlas/Objects/BaseObject.h: Add accessor for attribute flags, to
	  allow broader testing.

2007-04-01  Al Riddoch  <alriddoch@zepler.org>

	* Atlas/Codecs/Bach.cpp, Atlas/Codecs/Packed.cpp, Atlas/Codecs/XML.cpp:
	  Add C stdlib include to get atol. Not previously requires as some
	  compilers included this inside the STL headers.

2007-04-01  Al Riddoch  <alriddoch@zepler.org>

	* Atlas/Net/Stream.cpp, Atlas/Codecs/Bach.cpp,
	  Atlas/Codecs/Packed.cpp, Atlas/Codecs/XML.cpp:
	  Re-code the parsing state machines for negotiation and codecs
	  so they are more efficient.

2007-01-12  Al Riddoch  <alriddoch@zepler.org>

	* Atlas/Message/Makefile.am: Remove Layer.h from the distribution.

2006-12-05  Al Riddoch  <alriddoch@zepler.org>

	* tests/unit/Makefile.am: Add new directory for true unit tests.

	* tests/unit/AtlasDebugtest.cpp: Add initial proof of concept unit
	  test for the debug header.

2006-10-12  Al Riddoch  <alriddoch@zepler.org>

	* Atlas/Objects/GenerateObjectFactory.py: Tweak the copyright name.

	* Atlas/Objects/flag.cpp, Atlas/Objects/objectFactory.cpp:
	  Re-generate generated source.

2006-08-14  Al Riddoch  <alriddoch@zepler.org>

	* atlas-cpp.spec.in: Remove BuildRequires, as all that is required
	  is a C++ compiler.

2006-05-16  Al Riddoch  <alriddoch@zepler.org>

	* Atlas/Net/Stream.cpp: Fix strange logic in codec negotiation
	  that ran the state machine for every byte.
