@@ -2,9 +2,8 @@
 // the GNU Lesser General Public License (See COPYING for details).
 // Copyright (C) 2000 Michael Day
 
-// $Id$
-
 #include <Atlas/Filter.h>
+#include <cstring>
 
 namespace Atlas {
 
